refactor(0) update api search category